--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "combo-seed",
-  "description": "A starting point for Combo.js web applications.",
-  "version": "1.0.0",
-  "author": "Eric Harms",
-  "repository": {},
-  "license": "MIT",
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "grunt": "^1.0.1",
-    "grunt-babel": "^6.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-uglify": "^3.1.0",
-    "grunt-contrib-cssmin": "^1.0.2",
-    "grunt-contrib-watch": "~1.0.0",
-    "http-server": "^0.10.0"
-  },
-  "scripts": {
-    "start": "http-server app -a localhost -p 8000 -c-1"
-  }
+	"name": "combo-site",
+	"description": "The official site for Combo.js",
+	"version": "1.0.0",
+	"author": "Eric Harms",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/combojs/combo-site.git"
+	},
+	"license": "MIT",
+	"devDependencies": {
+		"babel-core": "^6.26.0",
+		"babel-loader": "^7.1.2",
+		"babel-minify-webpack-plugin": "^0.2.0",
+		"babel-preset-es2015": "^6.24.1",
+		"css-loader": "^0.28.9",
+		"eslint": "^4.15.0",
+		"eslint-loader": "^1.9.0",
+		"http-server": "^0.10.0",
+		"style-loader": "^0.19.1",
+		"webpack": "^3.10.0"
+	},
+	"scripts": {
+		"build": "webpack",
+		"start": "http-server app -a localhost -p 8000 -c-1"
+	},
+	"dependencies": {}
 }
