--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/combojs/combo-site.git"
-	},
+	}, 
 	"license": "MIT",
 	"devDependencies": {
 		"babel-core": "^6.26.0",
@@ -17,6 +17,7 @@
 		"css-loader": "^0.28.9",
 		"eslint": "^4.15.0",
 		"eslint-loader": "^1.9.0",
+		"eslint-config-combo": "^1.0.2",
 		"http-server": "^0.10.0",
 		"style-loader": "^0.19.1",
 		"webpack": "^3.10.0"
